fix: filter button not centered in desktop mode

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1625,8 +1625,14 @@ input[type="radio"]:checked + .radio-label {
     }
     .home-filter-container {
       width: 80vw;
-      justify-content: start;
       gap: 30px;
+      display: flex;
+      flex-flow: row no-wrap;
+      align-items: center;
+      justify-content: space-between;
+      padding-left: 0px;
+      margin-left: auto;
+      margin-right: auto;
     }
     .result-header-container {
       width: 80vw;
